--- a/src/components/Popup/IQServer/PolicyPage/PolicyPage.css
+++ b/src/components/Popup/IQServer/PolicyPage/PolicyPage.css
@@ -22,7 +22,7 @@
 }
 
 .nx-policy-violation-indicator {
-  margin: 0px !important;
+  /*margin: 0px !important;*/
   width: unset !important;
 }
 
